--- a/task.css
+++ b/task.css
@@ -20,6 +20,17 @@ main {
 	align-items: center;
 	padding: 0 20px;
 	background-color: rgba(177, 73, 238, 0.244);
+	width: 80%;
+	margin-top: 0;
+	margin: 0 auto;
+	border-radius: 10px;
+}
+@media (max-width: 450px) {
+	main {
+		width: 100%;
+		margin: auto;
+		transition: 400ms ease-in-out;
+	}
 }
 #Register {
 	height: 28px;
@@ -37,7 +48,9 @@ main {
 	background-color: #ffffff9e;
 	padding: 15px 30px;
 	border-radius: 10px;
+	margin: 0;
 }
+
 .container header {
 	font-size: 1.5em;
 	font-weight: 500;
@@ -119,19 +132,28 @@ main {
 	border: none;
 	font-size: 1rem;
 }
+.column {
+	margin: 15px 20px 0;
+}
+.left {
+	display: flex;
+}
+#submit,
+#clear {
+	width: 50%;
+}
 .form button {
 	height: 28px;
-	width: 100%;
 	font-size: 1rem;
 	font-weight: 400;
-	margin-top: 25px;
 	border: none;
 	cursor: pointer;
-	transition: all 0.2s ease;
+	margin: 5px;
 	color: white;
 	background-color: #cdb4db;
 }
 .form button:hover {
+	transition: all 0.2s ease;
 	background-color: #b78ad1c2;
 }
 @media (max-width: 500px) {
@@ -149,13 +171,29 @@ main {
 	align-items: center;
 	flex-direction: column;
 	height: 60vh;
-	background-color: #b960ec;
+	background-color: #b960ec8e;
+	border-radius: 30px;
+	transition: 3s ease-in-out;
 }
-.error {
+.done h2 {
+	font-size: 50px;
+}
+.done h3 {
+	font-size: 25px;
+	font-weight: 400;
+}
+.error,
+.success {
 	color: red;
 }
 
 select,
 option:hover {
 	background-color: #b960eca7;
+}
+
+.total {
+	display: flex;
+	justify-content: center;
+	margin: 20px;
 }
